--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -232,7 +232,7 @@
 											emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 											class="listbox" >
 									        <auxhead>
-									            <auxheader class="header" colspan="5" >
+									            <auxheader class="header" colspan="${vm.isAttendanceForParentsVisible() ? 5 : 4}" >
 									            	<hbox hflex="1" height="42px" align="center" >
 										            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 									            			<hbox vflex="1" align="center">
@@ -255,7 +255,7 @@
 									            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" />
 <!-- 									            <listheader width="35px" /> -->
 									            <listheader width="35px" />
-									            <listheader hflex="min"/>
+									            <listheader hflex="min" if="${vm.isAttendanceForParentsVisible()}" />
 									        </listhead>
 									         
 									        <template name="model" var="item">
@@ -288,8 +288,8 @@
 														    </popup>
 								                		</vbox>
 									                </listcell>
-									                <listcell>
-									                	<button label="${c:l('txt.ui.common.attendance')}" onClick="@command('showAttendanceCmd', course=item)" />
+									                <listcell if="${vm.isAttendanceForParentsVisible()}" >
+										                	<button label="${c:l('txt.ui.common.attendance')}" onClick="@command('showAttendanceCmd', course=item)" />
 									                </listcell>
 									            </listitem>
 									        </template>
@@ -300,6 +300,7 @@
 										<grid sclass="grid-spreadsheet" height="480px" 
 											style="border: none; overflow:scroll; margin-top: 20px;"
 											visible="@load(vm.showLessonStats)"
+											if="${vm.isAttendanceForParentsVisible()}"
 											model="@load(vm.lessonStats.learnLessonsStatsList)">
 											
 											<columns>
