--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -4,82 +4,53 @@
 <?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 
 <zk>
-	<borderlayout self="@{define(mainContent)}" hflex="1"
+	<div self="@{define(mainContent)}" 
+		hflex="1"
+		vflex="1"
+		sclass="scb-view" 
 		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationVM')"
 		validationMessages="@id('vmsgs')"
 	    form="@id('fx') @load(vm) @save(vm, before='submit')" >
-		<center border="none"
-			style="@load(vm.getBorderLayoutCenterStyle())"
-			autoscroll="true" >
-			<div>
-				<hlayout spacing="0">
-					<vbox hflex="1" />
-					
-					<vbox hflex="20" pack="center" align="center" >
-						<hbox hflex="1" pack="end" align="center" >
-							<vbox hflex="1" align="center" >
-								<headline label="${vm.pageHeadline}" menuSelected="menu_applicationToClub" />
-							</vbox>
-						</hbox>
-						<vbox hflex="1" vflex="1" align="end" pack="center">
-							<button onClick="@command('backCmd')" 
-								label="${c:l('txt.ui.common.Back')}" 
-								visible="@load(vm.isBackButtonVisible())"
-								iconSclass="z-icon-arrow-left" />
-						</vbox>
-					</vbox>
-					
-					<vbox hflex="1" />
-				</hlayout>
+			
+            <hlayout spacing="0">
+                <label value="${vm.pageHeadline}" sclass="scb-headline-big"/>
+                
+                <button onClick="@command('backCmd')" 
+                            label="${c:l('txt.ui.common.Back')}" 
+                            visible="@load(vm.isBackButtonVisible())"
+                            iconSclass="z-icon-arrow-left" />
+            </hlayout>
+			
 				
-				<hlayout spacing="0">
-				
-					<vbox hflex="1" />
+			<hlayout spacing="0">
 					
-					<!-- Potvrzujici info -->
-					<vbox hflex="20" pack="center" align="center" sclass="vbox-content" visible="@load(vm.showNotification)">
-						<window closable="false" border="normal" sclass="alert alert-success" visible="@load(vm.confirmText ne null)">
-							<caption iconSclass="z-icon-check">
-								<label value="@load(vm.confirmText)"/>
-							</caption>
-						</window>
-						<button label="${c:l('txt.ui.common.ToDownloadApplication')}" onClick="@command('downloadCmd')" iconSclass="z-icon-download" visible="@load(vm.confirmText ne null)" />
-						<window closable="false" border="normal" sclass="alert alert-danger" visible="@load(vm.errotText ne null)" >
-							<caption iconSclass="z-icon-exclamation">
-								<label value="@load(vm.errotText)"/>
-							</caption>
-						</window>
-					</vbox>
+				<!-- Potvrzujici info -->
+				<vbox hflex="20" pack="center" align="center" sclass="vbox-content" visible="@load(vm.showNotification)">
+					<window closable="false" border="normal" sclass="alert alert-success" visible="@load(vm.confirmText ne null)">
+						<caption iconSclass="z-icon-check">
+							<label value="@load(vm.confirmText)"/>
+						</caption>
+					</window>
+					<button label="${c:l('txt.ui.common.ToDownloadApplication')}" onClick="@command('downloadCmd')" iconSclass="z-icon-download" visible="@load(vm.confirmText ne null)" />
+					<window closable="false" border="normal" sclass="alert alert-danger" visible="@load(vm.errotText ne null)" >
+						<caption iconSclass="z-icon-exclamation">
+							<label value="@load(vm.errotText)"/>
+						</caption>
+					</window>
+				</vbox>
 		
-					<!-- Formular -->
-					<vbox hflex="20" pack="center" align="center" sclass="vbox-content" visible="@load(vm.editMode)" >	    
-						
-						<vbox hflex="1" align="end" style="margin: 0px;" visible="false">
-							Údaje označené hvězdičkou jsou povinné.
-						</vbox>
+				<!-- Formular -->
+				<vlayout visible="@load(vm.editMode)" >	  
+				
+					<!-- Vyber kurzu -->
+                    <groupbox hflex="1" sclass="no-inner-padding" if="${vm.courseSelectionRequired}">
+                        <caption label="${c:l('txt.ui.common.CourseSelection')}" />
 						
 						<!-- Vyber kurzu -->
-						<grid hflex="1" sclass="form-grid" style="margin-top: 20px;margin-bottom: 20px;" 
-							if="${vm.courseSelectionRequired}" >
-							<columns>
-				                <column align="left" hflex="1" />
-				            </columns>
-				            <auxhead>
-				            	<auxheader colspan="2" style="background: #428CCD;">
-				            		<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-				            			<hbox>
-					            			<vbox>
-					            				<label value="${c:l('txt.ui.common.CourseSelection')}"/>
-											</vbox>
-				            			</hbox>
-				            		</vbox>
-				            	</auxheader>
-				            </auxhead>
-							<rows style="background: white;">
-								<row sclass="form-grid-row" 
-									style="border: none; padding: 10px 20px 20px 20px;"
-									if="${!vm.securedMode}" >
-									<cell sclass="form-grid-cell" >
+						<grid hflex="1" if="${vm.courseSelectionRequired}" >
+							<rows>
+								<row if="${!vm.securedMode}" >
+									<cell   >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.SelectCourseLocation')}"/>
 											<!-- Vyber mista konani kurzu -->
@@ -98,26 +69,21 @@
 										</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" 
-									style="border: none; padding: 0px 20px 20px 20px;"
-									visible="@load(vm.courseList ne null and vm.courseList.isEmpty())"
+								<row visible="@load(vm.courseList ne null and vm.courseList.isEmpty())"
 									if="${!vm.securedMode}" >
 									<!-- Nenalezen zadky kurz -->
-									<cell sclass="form-grid-cell" >
+									<cell   >
 										<label value="${c:l('txt.ui.common.NoCourseFoundForLocation')}"/>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" 
-									style="border: none; padding: 0px 20px 10px 20px;"
-									visible="@load(!empty(vm.courseList))" >
-									<cell sclass="form-grid-cell" if="${!vm.securedMode}" >
+								<row visible="@load(!empty(vm.courseList))" >
+									<cell   if="${!vm.securedMode}" >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.SelectCourse')}"/>
 											<!-- Verejna cast -->
 											<listbox model="@load(vm.courseList)" 
 												hflex="1"
 												selectedItems="@bind(vm.courseSelected)"
-												class="listbox"
 												multiple="false"
 												checkmark="true" >
 												
@@ -154,10 +120,9 @@
 								    	</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" 
-									style="border: none; padding: 0px 20px 10px 20px;" 
-									if="${vm.securedMode}">
-									<cell sclass="form-grid-cell" >
+								
+								<row if="${vm.securedMode}">
+									<cell   >
 										<!-- Admin cast -->
 										<listbox model="@load(vm.courseList)" 
 											hflex="1"
@@ -190,29 +155,18 @@
 								</row>
 							</rows>
 						</grid>
+                    </groupbox>
 						
-						<!-- Zakonny zastupce -->
-						<grid hflex="1" sclass="form-grid" style="margin-top: 20px;margin-bottom: 20px;" >
-				            <auxhead>
-				            	<auxheader colspan="2" style="background: #428CCD;">
-				            		<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-				            			<hbox>
-					            			<vbox>
-					            				<label value="${c:l('txt.ui.common.representative')}"/>
-											</vbox>
-				            			</hbox>
-				            		</vbox>
-				            	</auxheader>
-				            </auxhead>
-							<columns>
-				                <column align="center" hflex="1" />
-				            </columns>
-							<rows style="background: white;">
-								<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
+					<!-- Zakonny zastupce -->
+					<groupbox hflex="1" sclass="no-inner-padding">
+                        <caption label="${c:l('txt.ui.common.representative')}" />
+                        
+						<grid hflex="1">
+							<rows>
+								<row>
+									<cell>
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.email')} / ${c:l('txt.ui.common.Username')}"/>
-											<label value="" />
 											<hbox hflex="1">
 												<textbox id="representativeEmail1" readonly="@load(vm.itemReadOnly or !vm.editMode)"
 													value="@bind(fx.application.courseParticRepresentative.contact.email1) @validator(vm.emailValidator, notNull=true)"
@@ -235,8 +189,8 @@
 									</cell>
 								</row>
 								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
+								<row>
+									<cell>
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.firstname')}"/>
 											<textbox id="representativeFirstname" readonly="@load(!vm.editMode)"
@@ -256,8 +210,8 @@
 									</cell>
 								</row>
 								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
+								<row >
+									<cell >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.surname')}"/>
 											<textbox id="representativeSurname" readonly="@load(!vm.editMode)"
@@ -277,8 +231,8 @@
 									</cell>
 								</row>
 								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
+								<row     >
+									<cell   >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.phone')} 1"/>
 											<textbox id="representativePhone1" readonly="@load(!vm.editMode)"
@@ -298,8 +252,8 @@
 									</cell>
 								</row>
 								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
+								<row>
+									<cell>
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.phone')} 2"/>
 											<textbox id="representativePhone2" readonly="@load(!vm.editMode)" 
@@ -315,8 +269,8 @@
 									</cell>
 								</row>
 								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 30px 30px;" >
-									<cell sclass="form-grid-cell" >
+								<row>
+									<cell>
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.email')} 2"/>
 											<textbox id="representativeEmail2" readonly="@load(!vm.editMode)" 
@@ -335,26 +289,17 @@
 								</row>
 							</rows>
 						</grid>
+					</groupbox>
 						
+					
 						<!-- Ucastnik -->
-						<grid hflex="1" sclass="form-grid" >
-				            <auxhead>
-				            	<auxheader colspan="2" style="background: #428CCD;">
-				            		<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-				            			<hbox>
-					            			<vbox>
-					            				<label value="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" />
-											</vbox>
-				            			</hbox>
-				            		</vbox>
-				            	</auxheader>
-				            </auxhead>
-							<columns>
-				                <column align="center" hflex="1" />
-				            </columns>
-							<rows style="background: white;" >
-								<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;">
-									<cell sclass="form-grid-cell">
+					<groupbox hflex="1" sclass="no-inner-padding">
+                        <caption label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" />
+                        
+						<grid hflex="1">
+							<rows>
+								<row>
+									<cell  >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.birthNumber')}"/>
 											<textbox id="particBirthNumber" readonly="@load(!vm.editMode)"
@@ -374,8 +319,8 @@
 										</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
+								<row     >
+									<cell   >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.firstname')}"/>
 											<textbox id="particFirstname" readonly="@load(!vm.editMode)"
@@ -394,8 +339,9 @@
 										</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
-									<cell sclass="form-grid-cell">
+								
+								<row>
+									<cell  >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.surname')}"/>
 											<textbox id="particSurname" readonly="@load(!vm.editMode)"
@@ -415,9 +361,8 @@
 									</cell>
 								</row>
 								
-								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
-									<cell sclass="form-grid-cell">
+								<row>
+									<cell  >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.street')}"/>
 											<textbox id="particStreet" readonly="@load(!vm.editMode)"
@@ -431,8 +376,9 @@
 										</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
-									<cell sclass="form-grid-cell">
+								
+								<row>
+									<cell  >
 										<vbox hflex="1">
 											<hbox>
 												<vbox>
@@ -462,8 +408,9 @@
 										</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
-									<cell sclass="form-grid-cell">
+								
+								<row>
+									<cell  >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.city')}"/>
 											<textbox id="particCity" readonly="@load(!vm.editMode)"
@@ -482,8 +429,9 @@
 										</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
-									<cell sclass="form-grid-cell">
+								
+								<row>
+									<cell  >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.zipCode')}"/>
 											<textbox id="particZipCode" readonly="@load(!vm.editMode)"
@@ -503,10 +451,8 @@
 									</cell>
 								</row>
 								
-								
-								
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
-									<cell sclass="form-grid-cell">
+								<row    >
+									<cell  >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.birthDate')}"/>
 											<datebox id="particBirthdate" readonly="@load(!vm.editMode)"
@@ -518,14 +464,15 @@
 			                            		tabindex="14" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
-														<label value="@bind(vmsgs[particBirthdate])" />
-													</span>
+													<label value="@bind(vmsgs[particBirthdate])" />
+												</span>
 											</hbox>
 										</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
-									<cell sclass="form-grid-cell">
+								
+								<row    >
+									<cell  >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.healthInsurance')}"/>
 											<textbox id="particHealthInsurance" readonly="@load(!vm.editMode)"
@@ -544,8 +491,8 @@
 										</vbox>
 									</cell>
 								</row>
-								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 30px 30px;">
-									<cell sclass="form-grid-cell">
+								<row>
+									<cell>
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.application.healthInfo')}"/>
 											<textbox rows="3" hflex="3" multiline="true" readonly="@load(!vm.editMode)"
@@ -557,9 +504,12 @@
 								</row>
 							</rows>
 						</grid>
+					</groupbox>
 						
 						<!-- Health info agreement -->
-						<hbox hflex="1" sclass="form-grid" visible="@load(vm.editMode and !vm.securedMode)" if="${vm.healthInfoConfirmRequired}" style="margin-top: 10px;">
+						<hbox hflex="1" sclass="form-grid" 
+								visible="@load(vm.editMode and !vm.securedMode)" 
+								if="${vm.healthInfoConfirmRequired}" style="margin-top: 10px;">
 							<checkbox checked="@bind(vm.healthInfoAgreement)" tabindex="18" />
 							<vlayout>
 								<label value="${vm.healthAgreement}" />
@@ -571,7 +521,8 @@
 						</hbox>
 						
 						<!-- Personal data process agreement -->
-						<hbox hflex="1" sclass="form-grid" visible="@load(vm.editMode and !vm.securedMode)" if="${vm.gdprConfirmRequired}" style="margin-top: 10px;">
+						<hbox hflex="1" sclass="form-grid" visible="@load(vm.editMode and !vm.securedMode)" 
+								if="${vm.gdprConfirmRequired}" style="margin-top: 10px;">
 							<checkbox checked="@bind(vm.personalInfoProcessAgreement)" tabindex="19" />
 							<vlayout>
 								<label value="${vm.persDataProcessAgreement}" />
@@ -583,7 +534,9 @@
 						</hbox>
 						
 						<!-- Club rules agreement -->
-						<hbox hflex="1" sclass="form-grid" visible="@load(vm.editMode and !vm.securedMode)" if="${vm.clubRulesConfirmRequired}" style="margin-top: 10px;">
+						<hbox hflex="1" sclass="form-grid" 
+								visible="@load(vm.editMode and !vm.securedMode)" 
+								if="${vm.clubRulesConfirmRequired}" style="margin-top: 10px;">
 							<checkbox checked="@bind(vm.clubRulesAgreement)" tabindex="19" />
 							<vlayout>
 								<label value="${vm.clubRulesText}" />
@@ -595,8 +548,8 @@
 						</hbox>
 						
 						<!-- Captcha -->
-						<hbox style="margin-bottom: 10px; margin-top: 20px" visible="@load(vm.editMode and !vm.securedMode)">
-							<vbox align="center">
+	                    <div sclass="form-captcha-panel" visible="@load(vm.editMode and !vm.securedMode)">
+							<hlayout>
 							    <button label="jiný obrázek" onClick="cap1.randomValue();"/>
 							    <bw.captcha id="cap1" />
 							    <textbox id="captcha" style="margin-bottom: 15px;" value="@bind(fx.captcha) @validator(vm.captchaValidator, catpt=cap1, validate=(vm.editMode and !vm.securedMode))" tabindex="20" />
@@ -605,8 +558,8 @@
 										<label value="@bind(vmsgs[captcha])" />
 									</span>
 								</hbox>
-							</vbox>
-						</hbox>
+							</hlayout>
+						</div>
 						
 						<hlayout style="margin-bottom: 20px;margin-top: 10px;">
 							<vlayout>
@@ -620,7 +573,7 @@
 									visible="@load(vm.editMode and vm.securedMode)" />
 							</vlayout>
 						</hlayout>
-					</vbox>
+					</vlayout>
 					
 					<popup id="emailPopup" >
 				        <label value="${c:l('txt.ui.common.email.info')}" />
@@ -632,23 +585,8 @@
 				        });
 				    </script>
 		    
-					<vbox hflex="1" />
 				</hlayout>
 				
-				<div visible="@load(vm.editMode and !vm.securedMode)">
-					<include src="/pages/common/template/footer.zul"/>
-				</div>
-			</div>
-		</center>
-		<south border="none" visible="@load(vm.showNotification)" >
-			<include src="/pages/common/template/footer.zul"/>
-		</south>
-	</borderlayout>
-	
-	
-	
+	</div>
 	
 </zk>
-
-
-
