--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
@@ -9,41 +9,26 @@
 	<div self="@{define(mainContent)}" 
 			hflex="1" 
 			vflex="1"
-			sclass="scb-view"
+			sclass="scb-view scb-view-900" 
 			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseVM')"
 			validationMessages="@id('vmsgs')"
        		form="@id('fx') @load(vm) @save(vm, before='submit')" >
 		
-		<hlayout spacing="0">
-			<vlayout hflex="1" />
-			
-			<vbox hflex="20" pack="center" >
-				<hbox hflex="1" align="center" vflex="1" >
-					<vlayout hflex="3">
-						<headline label="${vm.pageHeadline}" menuSelected="menu_courseList" />
-					</vlayout>
-					<vbox hflex="1" vflex="1" align="end" pack="center">
-						<button onClick="@command('backCmd')" 
-							label="${c:l('txt.ui.common.Back')}" 
-							iconSclass="z-icon-arrow-left" />
-					</vbox>
-				</hbox>
-			</vbox>
-			
-			<vlayout hflex="1" />
-		</hlayout>
-		
-		<hlayout spacing="0">
-		
-			<vlayout hflex="1" />
+		<hlayout>
+            <label value="${vm.pageHeadline}" sclass="scb-headline-big"/>
+            
+            <button onClick="@command('backCmd')" 
+				label="${c:l('txt.ui.common.Back')}" 
+				iconSclass="z-icon-arrow-left" />
+        </hlayout>
 
 			<!-- Formular -->
-			<vbox hflex="20" pack="center" sclass="vbox-content" >	    
-				
-				<grid hflex="1" >
+			<vlayout>	    
+				<grid hflex="1" sclass="scb-panel">
 					<columns>
 		                <column align="left" hflex="1" />
 		            </columns>
+		            
 					<rows >
 						<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
 							<cell sclass="form-grid-cell" >
@@ -211,24 +196,16 @@
 								emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 								class="listbox" >
 						        <auxhead>
-						            <auxheader class="header" colspan="3" >
-						            	<hbox hflex="1" height="42px" align="center" >
-							            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-						            			<hbox vflex="1" align="center">
-						            				<label value="${c:l('txt.ui.common.participants')}" />
-						            				<button tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" popup="addCourseParticipantsFromApplicationPopup" style="margin-left: 10px;" />
-						            			</hbox>
-						            		</vbox>
-						            		<vbox hflex="1" vflex="1" align="end" pack="center" >
-						            			<hbox>
-<!-- 						            				<button tooltiptext="${c:l('txt.ui.common.remove')}" sclass="btn-danger" iconSclass="z-icon-minus" onClick="@command('courseParticipantsDeleteCmd')" /> -->
-						            				<menupopup id="addCourseParticipantsFromApplicationPopup" >
-														<menuitem label="Z přihlášky" onClick="@command('addCourseParticipantsFromApplicationCmd')" />
-														<menuitem label="Z Kurzu" onClick="@command('addCourseParticipantsFromCourseCmd')" />
-											       	</menupopup>
-												</hbox>
-											</vbox>
-										</hbox>
+						            <auxheader colspan="3" >
+						            	<button tooltiptext="${c:l('txt.ui.common.new')}" 
+				            					sclass="add-item-btn"  
+				            					iconSclass="z-icon-plus" 
+				            					popup="addCourseParticipantsFromApplicationPopup"/>
+				            					
+				            			<menupopup id="addCourseParticipantsFromApplicationPopup" >
+											<menuitem label="Z přihlášky" onClick="@command('addCourseParticipantsFromApplicationCmd')" />
+											<menuitem label="Z Kurzu" onClick="@command('addCourseParticipantsFromCourseCmd')" />
+								       	</menupopup>
 						            </auxheader>
 						        </auxhead>
 								
@@ -258,6 +235,7 @@
 						        </template>
 						    </listbox>
 				        </tabpanel>
+				        
 				        <tabpanel>
 				        	<!-- Lekce -->
 							<listbox model="@load(vm.course.lessonList)"
@@ -269,26 +247,18 @@
 								emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 								class="listbox" >
 						        <auxhead>
-						            <auxheader class="header" colspan="3" >
-						            	<hbox hflex="1" height="42px" align="center" >
-							            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-						            			<hbox vflex="1" align="center">
-						            				<label value="${c:l('txt.ui.common.lessons')}" />
-						            				<button onClick="@command('newLessonCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" style="margin-left: 10px;" />
-						            			</hbox>
-						            		</vbox>
-						            		<vbox hflex="1" vflex="1" align="end" pack="center" >
-						            			<hlayout>
-												</hlayout>
-											</vbox>
-										</hbox>
+						            <auxheader colspan="3" >
+						            	<button onClick="@command('newLessonCmd')" 
+			            					tooltiptext="${c:l('txt.ui.common.new')}" 
+			            					sclass="add-item-btn" 
+			            					iconSclass="z-icon-plus" />
 						            </auxheader>
 						        </auxhead>
 								
 						        <listhead>
 						            <listheader label="${c:l('txt.ui.common.dayOfWeek')}" align="left" />
 						            <listheader label="${c:l('txt.ui.common.time')}" align="left" />
-						            <listheader width="50px" align="center" />
+						            <listheader width="80px" align="center" />
 						        </listhead>
 						         
 						        <template name="model">
@@ -307,10 +277,8 @@
 				        </tabpanel>
 				    </tabpanels>
 				</tabbox>
-			</vbox>
+			</vlayout>
 			
-			<vbox hflex="1" />
-		</hlayout>
 	</div>
 </zk>
 
