--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -5,7 +5,7 @@
 <zk>
 	<div 	self="@{define(mainContent)}" 
 			hflex="1" 
-			sclass="scb-view" 
+			sclass="scb-view scb-view-1100" 
 			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseListVM')">
 			
 		<vlayout hflex="1">
@@ -19,31 +19,24 @@
 					class="listbox" >
 		        <auxhead>
 		            <auxheader class="header" colspan="4" >
-		            	<hbox hflex="1" height="42px" align="center" >
-			            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-		            			<hbox vflex="1" align="center">
-		            				<label value="${c:l('txt.ui.menu.courses')}" style="margin-right:5px;" />
-		            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" 
+		            	<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" 
 		            					sclass="add-item-btn" 
 		            					iconSclass="z-icon-plus"
 		            					visible="@load(vm.isLoggedUserInRole('ADMIN'))" />
-		            			</hbox>
-		            		</vbox>
-		            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
-		            			<hbox vflex="1" pack="center" align="center">
-		            				<!-- Rocnik -->
-		            				<include src="/pages/common/component/context-year.zul"/>
-		            				<button iconSclass="z-icon-download" 
-		            					onClick="@command('exportToExcel',listbox=courseList)" 
-		            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
-		            					sclass="toolbar-btn"/>
-	            					<button iconSclass="z-icon-refresh" 
-	            						onClick="@command('refreshDataCmd')" 
-	            						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
-	            						sclass="toolbar-btn"/>
-								</hbox>
-							</vbox>
-						</hbox>
+		            					
+		            	<hlayout sclass="pull-right">
+		            		<!-- Rocnik -->
+            				<include src="/pages/common/component/context-year.zul"/>
+            				
+            				<button iconSclass="z-icon-download" 
+            					onClick="@command('exportToExcel',listbox=courseList)" 
+            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
+            					sclass="toolbar-btn"/>
+           					<button iconSclass="z-icon-refresh" 
+           						onClick="@command('refreshDataCmd')" 
+           						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
+           						sclass="toolbar-btn"/>
+		            	</hlayout>
 		            </auxheader>
 		        </auxhead>
 		        
@@ -52,8 +45,8 @@
 					<auxheader class="filter">
 						<textbox hflex="1"
 							value="@bind(vm.filter.courseName)"
-							onChange="@command('filterDomCmd')" />
-								onOK="@command('filterDomCmd')" />
+							onChange="@command('filterDomCmd')" 
+							onOK="@command('filterDomCmd')" />
 					</auxheader>
 					<auxheader class="filter">
 					</auxheader>
